# rusrp

./: .gitignore  Makefile  README.md  meson.build  meson_options.txt
config/: rusrp.toml.example  usrp-remote-link.toml.example
docs/: roadmap.md  usrp_protocol.md
scripts/: post_install.sh  setup.sh
src/: audio_alsa.c  audio_alsa.h  audio_processing.c  audio_processing.h  audio_trim.c  audio_trim.h  config.c  config.h  jitter_buffer.c  jitter_buffer.h  logic_hid.c  logic_hid.h  main.c  meson.build  telemetry.c  telemetry.h  usrp_protocol.c  usrp_protocol.h  usrp_transport.c  usrp_transport.h  util.h  watchdog.c  watchdog.h
systemd/: rusrp.service  rusrp@.service  usrp-remote-link@.service
udev/: 90-cm119a.rules
